--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "eslint": "^7.5.0",
     "node": "^14.4.0",
     "react": "^16.13.1",
     "react-db-google-sheets": "^2.0.0",
