--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,13 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "eslint": "^7.5.0",
     "node": "^14.4.0",
     "react": "^16.13.1",
-    "react-db-google-sheets": "^2.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "tabletop": "^1.6.3"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,9 +18,6 @@
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\""
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -38,8 +32,8 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.0.5",
-    "prettier-eslint": "^11.0.0",
-    "prettier-eslint-cli": "^5.0.0"
+    "eslint": "6.8.0",
+    "eslint-plugin-react": "^7.20.3",
+    "prettier": "^2.0.5"
   }
 }
