--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,6 +10,7 @@
     "node": "^14.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-async": "^10.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
