--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,7 +14,8 @@
     "react-async": "^10.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "serialize-javascript": "^4.0.0"
   },
   "scripts": {
     "start": "env-cmd -f .env.production react-scripts start",
